# sdl2-test

./: .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md
src/: game.cpp  game.h  main.cpp  pch.h
src/audio/: audio.h
src/common/: common.h  log.h  type.h  utils.h
src/core/: frame.h  window.cpp  window.h
src/gfx/: panel.cpp  panel.h  rect.cpp  rect.h
src/system/: collision.h  controller.h  entity.cpp  entity.h  field.h  scene.cpp  scene.h  serialize.cpp  serialize.h  texture.cpp  texture.h
